# NBodySimulation

./: .gitignore  NBodyCalc.py  README.md  drawDensity.py  drawTri.py  genAnimation.py  genAnimationDensity.py  genAnimationTri.py
500NBody/: 500dnbody.py.bak  500nbody.py
CPP/: CMakeLists.txt
CPP/include/: possion.h
CPP/src/: main.cpp  possion.cpp
Manim/: .~lock.cleanref.csv#  Holmberg.py  Moore.py  PM.py  bias.py  cleanref.csv  nbody.py  tree.py
Manim/tools/: search.py
docs/: 宇宙学模拟.md
tools/: draw.py
tools/Py/: draw.py  draw2.py  draw3.py  draw4.py
